about section - removed absolute height and changed to min-height to stop overflow. Gave image on right a min height of 200px

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ header {
 .about {
     margin: 100px;
     display: flex;
-    height: 350px;
+    min-height: 350px;
     gap: 100px;
 }
 
@@ -54,7 +54,7 @@ header {
     font-size: 30px;
     font-weight: 300px;
     color: #414141;
-    min-width: 560px;
+    
     
 }
 
@@ -80,6 +80,7 @@ header {
     
     object-fit: contain;
     max-width: 100%;
+    min-width: 200px;
     max-height: 500px;
     flex-shrink: 0;
     border-radius: 50%;
